# bounce

./: Cargo.toml  LICENSE  config.toml.example
docs/: index.md
src/: config.rs  main.rs  server.rs
src/irc/: types.rs
src/log_manager/: mod.rs
