[package]
name = "bounce"
version = "0.1.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "*"
thiserror = "*"
structopt = "*"
bytes = "*"
tokio = { version = "*", features = ["full"] }
native-tls = "*"
tokio-tls = "*"
futures = "*"
toml = "*"
serde = "*"
serde_derive = "*"
log = "*"
env_logger = "*"
